@@ -310,7 +310,17 @@ function oauth_common_form_authorize_submit(&$form, &$form_state) {
       parse_str($callback['query'], $query);
     }
     $query['oauth_token'] = $token->key;
-    $callback['query'] = http_build_query($query, 'idx_', '&');
+    $query['oauth_verifier'] = hash('sha1', $token->expires);
+
+    // Append Consumer provided query parameters according to the spec 6.2.3 for OAuth 1.0a.
+    $oauth_query = array();
+    $oauth_callback = !empty($token->callback_url) ? parse_url($token->callback_url) : '';
+    if (!empty($oauth_callback['query'])) {
+      parse_str($oauth_callback['query'], $oauth_query);
+    }
+
+    // Build the and combine the query parameters.
+    $callback['query'] = http_build_query($query + $oauth_query, 'idx_', '&');
 
     // Return to the consumer site
     header('Location: ' . _oauth_common_glue_url($callback), TRUE, 302);
